# Knowledge-Graphs-for-Empirical-Concept-Retrieval

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
src/config/: default.yaml
src/data/: get_overview.py  images.py  load_data.py  text.py  utils.py  wikimedia_query.py
src/data/wikidata_ids/: edible_fruit.npy  fruit.npy  motor_vehicle.npy  sport.npy
src/explanations/: concept.py  create_CAs.py  evaluate_CAVs_directions.py  evaluate_quality.py  evaluate_similarity.py  save_CAs.py  test_sanity.py  test_subconcepts.py  test_subconcepts_CAR.py  test_subconcepts_from_saved.py  utils.py
src/knowledge_graph/: create_kg.py
src/models/: evaluate.py  load_models.py
src/visualization/: plot_CAVs_directions.py  plot_PCA.py  plot_UMAP.py  plot_data.py  plot_quality.py  plot_sanity.py  plot_similarity.py  plot_subconcepts.py  plot_tSNE.py  plot_tuples.py
